examples/test/testpolicy1123.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1123
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key32: value28
      key46: value26
      key15: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value10
          key8: value0
      podSelector:
        matchLabels:
          key49: value27
          key23: value28
          key48: value7
